force-app/main/default/objects/Account/fields/Account_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Account_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Disabled</label>
    <type>Checkbox</type>
</CustomField>