force-app/main/default/objects/Account/fields/Actual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sales__c</fullName>
    <inlineHelpText>Please enter Numeric values</inlineHelpText>
    <label>Actual Sales</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>