force-app/main/default/objects/Account/fields/Alert_Message__c.field-meta.xml
<CustomField>
    <fullName>Alert_Message__c</fullName>
    <label>Alert Message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>