force-app/main/default/objects/Account/fields/Alert_Note__c.field-meta.xml
<CustomField>
    <fullName>Alert_Note__c</fullName>
    <label>Alert Note</label>
    <type>TextArea</type>
</CustomField>