force-app/main/default/objects/Account/fields/Animals_Treated__c.field-meta.xml
<CustomField>
    <fullName>Animals_Treated__c</fullName>
    <label>Animals Treated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Companion Animals</fullName>
            </value>
            <value>
                <fullName>Large Animals</fullName>
            </value>
            <value>
                <fullName>Equine</fullName>
            </value>
            <value>
                <fullName>Avian &amp; Exotics</fullName>
            </value>
            <value>
                <fullName>Feline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>