force-app/main/default/objects/Account/fields/APAC_Hubspot_ID__c.field-meta.xml
<CustomField>
    <fullName>APAC_Hubspot_ID__c</fullName>
    <description>External ID for relating Salesforce to the APAC / EMEA hubspot instance.</description>
    <externalId>true</externalId>
    <label>APAC Hubspot ID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>