force-app/main/default/objects/Account/fields/Assignment_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment Exempt</label>
    <type>Checkbox</type>
</CustomField>