force-app/main/default/objects/Account/fields/Associated_Line_of_Businesses__c.field-meta.xml
<CustomField>
    <fullName>Associated_Line_of_Businesses__c</fullName>
    <label>Associated Line of Businesses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GSS APAC</fullName>
            </value>
            <value>
                <fullName>GSS Rapport APAC</fullName>
            </value>
            <value>
                <fullName>GSS Robovet EMEA</fullName>
            </value>
            <value>
                <fullName>GSS RxWorks APAC</fullName>
            </value>
            <value>
                <fullName>GSS RxWorks EMEA</fullName>
            </value>
            <value>
                <fullName>GSS VisionVPM APAC</fullName>
            </value>
            <value>
                <fullName>Provet</fullName>
            </value>
            <value>
                <fullName>GSS  NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>