force-app/main/default/objects/Account/fields/Closer_AM__c.field-meta.xml
<CustomField>
    <fullName>Closer_AM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Development Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>