force-app/main/default/objects/Account/fields/CO_Potential_Sales__c.field-meta.xml
<CustomField>
    <fullName>CO_Potential_Sales__c</fullName>
    <formula>IF( ShippingCountry ==&quot;United States&quot;,
(Number_of_Vets__c *90000),
IF(ShippingCountry ==&quot;Australia&quot;,
(Number_of_Vets__c *120000),
IF(ShippingCountry ==&quot;New Zealand&quot;,
(Number_of_Vets__c *120000), null ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CO Potential Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>