force-app/main/default/objects/Account/fields/CO_Rolling_12_Month_Sales__c.field-meta.xml
<CustomField>
    <fullName>CO_Rolling_12_Month_Sales__c</fullName>
    <label>CO Rolling 12 Month Sales</label>
    <summarizedField>Line_Of_Business_Account__c.CO_Rolling_12_Month_Sales__c</summarizedField>
    <summaryForeignKey>Line_Of_Business_Account__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>