force-app/main/default/objects/Account/fields/Company_Codes__c.field-meta.xml
<CustomField>
    <fullName>Company_Codes__c</fullName>
    <label>Company Codes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>