force-app/main/default/objects/Account/fields/Company_Region__c.field-meta.xml
<CustomField>
    <fullName>Company_Region__c</fullName>
    <label>Company Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>US</fullName>
                <isActive>false</isActive>
                <label>US</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>