force-app/main/default/objects/Account/fields/CONA_CER__c.field-meta.xml
<CustomField>
    <fullName>CONA_CER__c</fullName>
    <description>CONA CER, received weekly on Mondays from Andrea Howard and matched and uploaded to Salesforce.</description>
    <label>CONA CER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>