force-app/main/default/objects/Account/fields/Connect_Customer__c.field-meta.xml
<CustomField>
    <fullName>Connect_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connect Customer</label>
    <type>Checkbox</type>
</CustomField>