force-app/main/default/objects/Account/fields/Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Converted_Date__c</fullName>
    <description>Account converted date</description>
    <label>Converted Date</label>
    <type>Date</type>
</CustomField>