force-app/main/default/objects/Account/fields/Corporate_Group__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate Group</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>