force-app/main/default/objects/Account/fields/Count_of_Legacy_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Legacy_Accounts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Declarative Lookup Rollup Summary field that aggregates the number of legacy accounts parented by an account.</description>
    <label>Count of Legacy Accounts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>