force-app/main/default/objects/Account/fields/Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status__c</fullName>
    <formula>CASE( CO_Credit_Status__c , 
&quot;Ok&quot;,IMAGE(&#39;/resource/Ok&#39;,&#39;png&#39;,75,75), 
&quot;Closed&quot;,IMAGE(&#39;/resource/alerticon&#39;, &#39;png&#39;, 75,75), 
&quot;Stop Credit&quot;,IMAGE(&#39;/resource/alerticon&#39;, &#39;png&#39;, 75,75), 
&quot;Cash On Delivery&quot;,IMAGE(&#39;/resource/alerticon&#39;, &#39;png&#39;, 75,75), 
&quot;Awaiting Approval&quot;,IMAGE(&#39;/resource/warning&#39;, &#39;png&#39;, 75,75), 
IMAGE(&#39;/resource/Ok&#39;, &#39;png&#39;, 75,75))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Red = Stop Credit, Closed or COD.
Green = Open.
Amber = Awaiting Approval.</inlineHelpText>
    <label>Credit Status</label>
    <type>Text</type>
</CustomField>