force-app/main/default/objects/Account/fields/Critical_Care__c.field-meta.xml
<CustomField>
    <fullName>Critical_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critical Care</label>
    <type>Checkbox</type>
</CustomField>