force-app/main/default/objects/Account/fields/CS_Primary__c.field-meta.xml
<CustomField>
    <fullName>CS_Primary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS Primary</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>