force-app/main/default/objects/Account/fields/CS_Secondary__c.field-meta.xml
<CustomField>
    <fullName>CS_Secondary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS Secondary</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>