force-app/main/default/objects/Account/fields/Data_Migration_Conversion_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Conversion_Key__c</fullName>
    <description>The foreign key to the object on the integrated system</description>
    <externalId>true</externalId>
    <inlineHelpText>Represents the ID of the record on the integrated system</inlineHelpText>
    <label>Data Migration Conversion Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>