force-app/main/default/objects/Account/fields/DSID__c.field-meta.xml
<CustomField>
    <fullName>DSID__c</fullName>
    <label>DSID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>