force-app/main/default/objects/Account/fields/Duplicate_Code__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Code__c</fullName>
    <label>Duplicate Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>