force-app/main/default/objects/Account/fields/GSS_Installation_Type__c.field-meta.xml
<CustomField>
    <fullName>GSS_Installation_Type__c</fullName>
    <label>GSS Installation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Terminal Server</fullName>
            </value>
            <value>
                <fullName>Peer to Peer</fullName>
            </value>
            <value>
                <fullName>TS &amp; P2P</fullName>
            </value>
            <value>
                <fullName>Single PC/Laptop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>