force-app/main/default/objects/Account/fields/Hardware_Type__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Type__c</fullName>
    <label>Hardware Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Covetrus</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>Combo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>