force-app/main/default/objects/Account/fields/IMPAccountNum__c.field-meta.xml
<CustomField>
    <fullName>IMPAccountNum__c</fullName>
    <label>IMPAccountNum</label>
    <length>40</length>
    <type>Text</type>
</CustomField>