force-app/main/default/objects/Account/fields/Inside_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Corporate inside Sales Rep Assigned to the account.</description>
    <label>Inside Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>