force-app/main/default/objects/Account/fields/Insights_Connect_Customer__c.field-meta.xml
<CustomField>
    <fullName>Insights_Connect_Customer__c</fullName>
    <formula>IF( Connect_Customer__c =TRUE,IMAGE(&#39;/resource/ok&#39;,&#39;png&#39;,75,75),&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connect Customer</label>
    <type>Text</type>
</CustomField>