force-app/main/default/objects/Account/fields/Insights_Critical_Care__c.field-meta.xml
<CustomField>
    <fullName>Insights_Critical_Care__c</fullName>
    <formula>IF(Critical_Care__c = TRUE,  IMAGE(&#39;/resource/CriticalCare&#39;,&#39;png&#39;,75,75),&#39;&#39;)</formula>
    <label>Critical Care</label>
    <type>Text</type>
</CustomField>