force-app/main/default/objects/Account/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Lead List</fullName>
            </value>
            <value>
                <fullName>Manufacturer Referral</fullName>
            </value>
            <value>
                <fullName>Pet Owner Request</fullName>
            </value>
            <value>
                <fullName>Practice Phone Inquiry</fullName>
            </value>
            <value>
                <fullName>Practice Web Inquiry</fullName>
            </value>
            <value>
                <fullName>Vetmatrix</fullName>
            </value>
            <value>
                <fullName>Luitpold Pilot Practice</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>PTP</fullName>
            </value>
            <value>
                <fullName>Practice Referral</fullName>
            </value>
            <value>
                <fullName>WideNet</fullName>
            </value>
            <value>
                <fullName>Drip Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>