force-app/main/default/objects/Account/fields/Licensed_Veterinarian__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Veterinarian__c</fullName>
    <label>Licensed Veterinarian</label>
    <length>100</length>
    <type>Text</type>
</CustomField>