force-app/main/default/objects/Account/fields/MSSAccountNum__c.field-meta.xml
<CustomField>
    <fullName>MSSAccountNum__c</fullName>
    <label>MSSAccountNum</label>
    <length>40</length>
    <type>Text</type>
</CustomField>