force-app/main/default/objects/Account/fields/NA_Hubspot_ID__c.field-meta.xml
<CustomField>
    <fullName>NA_Hubspot_ID__c</fullName>
    <description>External ID for relating Salesforce to the NA hubspot instance.</description>
    <externalId>true</externalId>
    <label>NA Hubspot ID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>