force-app/main/default/objects/Account/fields/Number_of_Scanners__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Scanners__c</fullName>
    <label>Number of Scanners</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>