force-app/main/default/objects/Account/fields/Number_of_Veterinarians__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Veterinarians__c</fullName>
    <formula>IF(Number_of_Vets__c&lt;9, 
CASE( Number_of_Vets__c,0,IMAGE(&#39;/resource/Vets0&#39;,&#39;png&#39;,75,75), 
1,IMAGE(&#39;/resource/Vets1&#39;,&#39;png&#39;,75,75), 
2,IMAGE(&#39;/resource/Vets2&#39;,&#39;png&#39;,75,75), 
3,IMAGE(&#39;/resource/Vets3&#39;,&#39;png&#39;,75,75), 
4,IMAGE(&#39;/resource/Vets4&#39;,&#39;png&#39;,75,75), 
5,IMAGE(&#39;/resource/Vets5&#39;,&#39;png&#39;,75,75), 
6,IMAGE(&#39;/resource/Vets6&#39;,&#39;png&#39;,75,75), 
7,IMAGE(&#39;/resource/Vets7&#39;,&#39;png&#39;,75,75), 
8,IMAGE(&#39;/resource/Vets8&#39;,&#39;png&#39;,75,75), 
IMAGE(&#39;/resource/Vets0&#39;,&#39;png&#39;,75,75)), 
IMAGE(&#39;/resource/Vets9&#39;,&#39;png&#39;,75,75))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Veterinarians</label>
    <type>Text</type>
</CustomField>