force-app/main/default/objects/Account/fields/Override_Business_Owner__c.field-meta.xml
<CustomField>
    <fullName>Override_Business_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines whether or not the business owner will be determined by territory or by the corporate parent.</description>
    <label>Override Business Owner</label>
    <type>Checkbox</type>
</CustomField>